# ImageProcessing.Lb1.ColorSpaceConverter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml
CSCEngine/: CMakeLists.txt
CSCEngine/include/: Converter.hpp  Helper.hpp  IConverter.hpp  Image.hpp  Types.hpp
CSCEngine/src/: Converter.cpp  Helper.cpp
CSCViewer/: CMakeLists.txt
CSCViewer/include/: MainWindow.hpp  Manager.hpp  QCanvas.hpp  QScrollableCanvas.hpp
CSCViewer/src/: MainWindow.cpp  MainWindow.ui  Manager.cpp  QCanvas.cpp  QScrollableCanvas.cpp
cmake/: InstallDeps.cmake  SetupGlobalConfig.cmake
